--- a/index.html
+++ b/index.html
@@ -1,73 +1,53 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <title>○×3択問題アプリ</title>
-  <style>
-    body { font-family: sans-serif; margin: 20px; }
-    #quiz-screen, #input-screen { display: none; }
-    .answer-button.correct { background-color: lightgreen; }
-    .answer-button.incorrect { background-color: lightcoral; }
-    table, th, td { border: 1px solid black; border-collapse: collapse; padding: 4px; }
-    th { background-color: #f0f0f0; }
-  </style>
+  <meta charset="UTF-8">
+  <title>薬理学○×3択問題</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <!-- リスト選択画面 -->
-  <section id="list-page">
-    <h2>リスト選択</h2>
+  <div id="list-page">
+    <h2>問題作成ページ</h2>
     <div id="list-buttons"></div>
-    <button id="add-list-btn">＋ リスト追加</button>
-  </section>
+    <button id="add-list-btn">＋新しいリストを追加</button>
+  </div>
 
-  <!-- 入力画面 -->
-  <section id="input-screen">
-    <h2>入力画面</h2>
-    <form id="input-form" onsubmit="return false;">
-      <div>
-        <label for="current-list-name">リスト名：</label>
-        <input id="current-list-name" type="text" required />
-      </div>
-      <div>
-        <label for="true-list">正文リスト：</label><br />
-        <textarea id="true-list" rows="10" cols="50" required></textarea>
-      </div>
-      <div>
-        <label for="false-list">誤文リスト：</label><br />
-        <textarea id="false-list" rows="10" cols="50" required></textarea>
-      </div>
-      <div>
-        <button type="button" onclick="generateQuestions()">問題を作成</button>
-        <button type="button" id="back-to-list">保存して戻る</button>
-      </div>
-    </form>
-  </section>
+  <!-- 問題入力画面 -->
+  <div id="input-screen" style="display: none;">
+    <h2>問題入力ページ</h2>
+    <input type="text" id="current-list-name" placeholder="リスト名"><br><br>
+    <label>正文（1行ずつ）</label><br>
+    <textarea id="true-list" rows="8" cols="40"></textarea><br><br>
+    <label>誤文（1行ずつ）</label><br>
+    <textarea id="false-list" rows="8" cols="40"></textarea><br><br>
+    <button onclick="generateQuestions()">出題開始</button>
+    <button onclick="setupListPage(); document.getElementById('input-screen').style.display='none'; document.getElementById('list-page').style.display='block';">保存して戻る</button>
+  </div>
 
-  <!-- 問題画面 -->
-  <section id="quiz-screen">
-    <h2>問題</h2>
+  <!-- クイズ画面 -->
+  <div id="quiz-screen" style="display: none;">
+    <h2>薬理学○×3択クイズ</h2>
     <div id="progress"></div>
     <div id="question-texts"></div>
     <table id="answer-table"></table>
-
     <div>
-      <label><input type="checkbox" id="mark-question" onchange="toggleMark()" /> チェックする</label>
+      <input type="checkbox" id="mark-question" onchange="toggleMark()"> チェック
+      <button onclick="toggleExplanation()">解説</button>
     </div>
-
+    <div id="explanation" style="display: none;"></div>
+    <div id="result-message"></div>
     <div>
       <button onclick="prevQuestion()">前へ</button>
-      <button onclick="nextQuestion()" id="next-button" disabled>次へ</button>
-      <button onclick="toggleExplanation()">解説を表示</button>
-      <button id="toggle-marked-btn" onclick="toggleMarkedOnly()">チェックした問題のみ出題</button>
+      <button id="next-button" onclick="nextQuestion()" disabled>次へ</button>
     </div>
+    <div>
+      <button id="toggle-marked-btn" onclick="toggleMarkedOnly()">チェックした問題のみ出題</button>
+      <button onclick="goToInput()">問題入力ページに戻る</button>
+    </div>
+    <div id="accuracy">正答率: 0%</div>
+  </div>
 
-    <div id="result-message"></div>
-    <div id="accuracy"></div>
-    <div id="explanation" style="display: none;"></div>
-    <button onclick="goToInput()">入力画面に戻る</button>
-  </section>
-
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
